# ExpenseTrackerBackend

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  wrangler.toml
.github/: copilot-instructions.md
.github/agents/: docs-sync.agent.md
.github/instructions/: cloudflare.instructions.md  database.instructions.md  rust.instructions.md
.github/workflows/: ci.yml  deploy.yml
docs/: openapi.yaml  preview.sh  swagger.html
migrations/0001_initial_schema/: down.sql  up.sql
scripts/: get-token.sh
src/: cache.rs  lib.rs  models.rs  routes.rs  validation.rs
tests/: integration.sh
