[package]
name = "expense-tracker-api"
version = "0.1.0"
edition = "2021"

[lib]
# rlib allows `cargo test` to run native (non-WASM) tests for pure logic
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = { version = "0.8", features = ["d1"] }
worker-macros = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "js"] }
base64 = "0.22"
